--- a/cha6-vue/package.json
+++ b/cha6-vue/package.json
@@ -15,6 +15,8 @@
     "svgo": "svgo -f src/icons/svg --config=src/icons/svgo.yml"
   },
   "dependencies": {
+    "socket.io": "^2.2.0",
+    "socket.io-client": "^2.2.0",
     "axios": "0.18.1",
     "element-ui": "2.14.1",
     "js-cookie": "2.2.0",
